--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,11 +1,32 @@
+# This workflow creates a daily journal entry in the "journals" directory
+# and commits it to the main branch. It runs every day at 18:15 UTC (00:00 Nepal Time).
+# The workflow is triggered by a cron schedule and can also be manually triggered.
+# The workflow also runs on push to the main branch to ensure that it is working correctly.
+# The workflow uses the latest version of Ubuntu as the runner and checks out the code.
+# It configures the Git user with a name and email, creates a new journal entry file
+# if it doesn't exist, and adds and commits the new journal file. If no new journal file
+# was created, it makes an empty commit. Finally, it pushes the changes to the main branch.
+# This workflow is useful for automating daily journal entries and keeping track of progress
+# and tasks in a project. It can be customized to include specific tasks or focus areas
+# for each day. The workflow is designed to be simple and efficient, allowing for easy
+# tracking of daily progress and tasks without manual intervention.
+# This workflow is designed to create a daily journal entry in the "journals" directory
+# and commit it to the main branch. It runs every day at 18:15 UTC (00:00 Nepal Time).
+# The workflow is triggered by a cron schedule and can also be manually triggered.
+# The workflow also runs on push to the main branch to ensure that it is working correctly.
+# The workflow uses the latest version of Ubuntu as the runner and checks out the code.
+
 name: 📅 Daily Commit
 
 # runs every day at 18:15 UTC → 00:00 Nepal Time
 on:
   schedule:
-    - cron: '15 18 * * *'  
+    - cron: "15 18 * * *"
   # Allow manual triggering for testing
   workflow_dispatch:
+  # Run on push to main branch to ensure workflow is working
+  push:
+    branches: [main]
 
 jobs:
   commit:
@@ -14,16 +35,41 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          persist-credentials: true  
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Configure Git user
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "khadka27"
+          git config user.email "abishekkhadka90@gmail.com"
 
-      - name: Make empty commit
+      - name: Update journal date
         run: |
-          git commit --allow-empty -m "chore: daily automated commit $(date -u +'%Y-%m-%d')"
+          # Get current date in format YYYY-MM-DD
+          CURRENT_DATE=$(date -u +'%Y-%m-%d')
+
+          # Create a new journal entry file if it doesn't exist
+          JOURNAL_DIR="journals"
+          mkdir -p $JOURNAL_DIR
+          JOURNAL_FILE="$JOURNAL_DIR/journal-$CURRENT_DATE.md"
+
+          if [ ! -f "$JOURNAL_FILE" ]; then
+            echo "# Journal Entry: $CURRENT_DATE" > "$JOURNAL_FILE"
+            echo "" >> "$JOURNAL_FILE"
+            echo "Daily automated journal entry created by GitHub Actions." >> "$JOURNAL_FILE"
+            echo "" >> "$JOURNAL_FILE"
+            echo "## Today's Focus" >> "$JOURNAL_FILE"
+            echo "- Continue building and improving the project" >> "$JOURNAL_FILE"
+            echo "- Review code and documentation" >> "$JOURNAL_FILE"
+            echo "- Plan next features and enhancements" >> "$JOURNAL_FILE"
+            
+            # Add and commit the new journal file
+            git add "$JOURNAL_FILE"
+            git commit -m "feat: add journal entry for $CURRENT_DATE"
+          else
+            # Make an empty commit if no new journal file was created
+            git commit --allow-empty -m "chore: daily automated commit $CURRENT_DATE"
+          fi
 
       - name: Push to main
         run: git push origin main
