--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install ts-node
         run: npm install -g ts-node typescript
 
+      - name: Install Node types
+        run: npm install --save-dev @types/node
+
       - name: Configure Git user
         run: |
           git config user.name "khadka27"
