--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install -g ts-node typescript
 
       - name: Install Node types
-        run: npm install --save-dev @types/node
+        run: npm install --save-dev @types/node --legacy-peer-deps
 
       - name: Configure Git user
         run: |
